--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -1,21 +1,26 @@
 <!DOCTYPE html> 
 <html lang="en">
     <head>
-        <title> Preguntas </title>
-        <link rel='stylesheet' href='/stylesheets/style.css' />
+        <title> Quiz </title>
         <link rel='icon' href='favicon.ico' type='image/x-icon' />
+        <link rel='stylesheet' type='text/css' href='/stylesheets/style.css' />
+        <link media='only screen and (min-width: 530px) and (min-device-width: 481px)'
+        rel='stylesheet' type='text/css' href='/stylesheets/wide.css' />
+        <link media='only screen and (max-width: 480px)'
+        rel='stylesheet' type='text/css' href='/stylesheets/smartphone.css' />
     </head>
+
     <body>
     <div id="page-wrap">
         <header class="main" id="h1">
-            <h2>Quiz: el juego de las preguntas</h2>
+            <h2>Quiz<span>: el juego de las preguntas<span></h2>
         </header>
         <nav class="main" id="n1" role="navigation">
             <span><a href="/"> Inicio </a></span>
             <span><a href="/quizes/question"> Preguntas </a></span>
         </nav>
         <section class="main" id="s1">
-        <%- body %>
+            <%- body %>
         </section>
         <footer class="main" id="f1">
             <a href="http://es.wikipedia.org/wiki/quiz">
