--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -26,6 +26,10 @@
             <a href="http://es.wikipedia.org/wiki/quiz">
                 Qué es un Quiz
             </a>
+<br>
+            <a href="https://github.com/jrhervas/quiz">
+                Proyecto Quiz en GitHub
+            </a>
         </footer>
     </div>
     </body>
