--- a/views/quizes/index.ejs
+++ b/views/quizes/index.ejs
@@ -5,6 +5,11 @@
         <td>
             <a href="quizes/<%= quizes[i].id %>"> <%= quizes[i].pregunta %> </a>
         </td>
+        <td>
+            <a href="quizes/<%= quizes[i].id %>/edit">
+                <button> editar </button>
+            </a>
+        </td>
     </tr>
 <% } %>
 </table>
