--- a/views/quizes/index.ejs
+++ b/views/quizes/index.ejs
@@ -3,6 +3,9 @@
 <% var i; for (i=0; i < quizes.length; i++){ %>
     <tr>
         <td>
+            <em> <%= quizes[i].tema %> </em>
+        </td>
+        <td>
             <a href="quizes/<%= quizes[i].id %>"> <%= quizes[i].pregunta %> </a>
         </td>
         <td>
