--- a/views/quizes/show.ejs
+++ b/views/quizes/show.ejs
@@ -1,3 +1,6 @@
+<p>
+  <em> <%= quiz.tema %> </em>
+</p>
 <form method="get" action="/quizes/<%= quiz.id %>/answer">
     Pregunta: <%= quiz.pregunta %>
     <input type="text" name="respuesta" value="Respuesta"/>
