--- a/views/quizes/index.ejs
+++ b/views/quizes/index.ejs
@@ -29,3 +29,8 @@
 </a>
 
 </div>
+
+<form method="get" action="/quizes">
+    <input type="text" name="search"/>
+    <input type="submit" value="Buscar">
+</form>
