Creacion de comentarios

--- a/views/quizes/show.ejs
+++ b/views/quizes/show.ejs
@@ -2,7 +2,21 @@
   <em> <%= quiz.tema %> </em>
 </p>
 <form method="get" action="/quizes/<%= quiz.id %>/answer">
-    Pregunta: <%= quiz.pregunta %>
+    Pregunta: <%= quiz.pregunta %> <br>
     <input type="text" name="respuesta" value="Respuesta"/>
     <input type="submit" value="Enviar">
 </form>
+<br>
+
+<p>
+  <a href="/quizes/<%= quiz.id %>/comments/new">
+    <button>Nuevo Comentario</button>
+  </a>
+</p>
+
+<br>
+<p><strong>Comentarios:</strong></p>
+
+<% for (index in quiz.Comments) { %>
+<p>- <%= quiz.Comments[index].texto %> </p>
+<% } %>
