--- a/views/quizes/index.ejs
+++ b/views/quizes/index.ejs
@@ -8,6 +8,7 @@
         <td>
             <a href="quizes/<%= quizes[i].id %>"> <%= quizes[i].pregunta %> </a>
         </td>
+        <% if (session.user){ %>
         <td>
             <a href="quizes/<%= quizes[i].id %>/edit">
                 <button> editar </button>
@@ -20,13 +21,16 @@
                 </button>
             </form>
         </td>
+        <% } %>
     </tr>
 <% } %>
 </table>
 
+<% if (session.user){ %>
 <a href="/quizes/new">
     <button type="button">Crear pregunta</button>
 </a>
+<% } %>
 
 </div>
 
